# latent-bridge

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: ml_ci.yml
configs/: config.yaml  main.yaml
configs/dataset/: cifar10.yaml
configs/model/: pixel_mlp.yaml  spatial_cnn.yaml
configs/trainer/: default.yaml
notebooks/: exploration.ipynb
results/eval_benchmarks/PixelMLP/: metrics.json
results/eval_benchmarks/SpatialCNN/: metrics.json
scripts/: inference.py  test.py  train.py
src/data/: datamodule.py
src/evaluation/: evaluator.py
src/models/: base.py  pixel_mlp.py  spatial_cnn.py
src/utils/: device.py  hardware.py  visualizer.py
tests/: test_model_performance.py
